# ImageEditor

./: README.md  install.sh  plain_run.py  pyproject.toml
configs/: blur_enhance.json  blur_invert.json  boost.json  edges.json  emboss.json  glow.json  pixelate.json
edit_image/: cli.py  pipeline.py
filters/: __init__.py
filters/base/: __init__.py  base_filter.py  conv_filter.py  dynamic_filter.py  static_filter.py
filters/catalog/: __init__.py  box.py  brightness.py  contrast.py  emboss.py  glow.py  retro.py  saturation.py  sharpen.py  sobel.py
